feat: added map configuration in ZonesConfiguration.java